--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
           </div>
           <div class="footer_block_right">
             <h3>Location</h3>
-            <img src="img/footer/map.png" alt="">
+            <iframe width="100%" height="180" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
           </div>
         </div>
       </div>
