--- a/index.html
+++ b/index.html
@@ -639,8 +639,10 @@
               <span>View All</span>
             </a>
           </div>
+          <img class="small_star" src="img/blog/star_mob.svg" alt="">
         </div>
       </div>
+      <img class="big_star" src="img/blog/star.png" alt="">
     </section>
 
     <section class="work">
