--- a/properties.html
+++ b/properties.html
@@ -56,8 +56,8 @@
       <div class="container">
         <div class="about_main_block">
           <h2>Featured Properties</h2>
-          <img class="desk" src="img/blog_page/feature.svg" alt="">
-          <img class="mob" src="img/blog_page/feature_mob.svg" alt="">
+          <img class="desk" src="img/properties/feature.svg" alt="">
+          <img class="mob" src="img/properties/feature_mob.svg" alt="">
           <p>Discover our exciting listings and find your next dream home or property investment today</p>
         </div>
       </div>
