--- a/about.html
+++ b/about.html
@@ -49,6 +49,30 @@
             </a>
           </div>
         </div>
+        <div class="header_drop">
+          <div class="header_drop_left">
+            <ul>
+              <li class="current-menu-item">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Properties</a>
+              </li>
+              <li>
+                <a href="#">Projects</a>
+              </li>
+              <li>
+                <a href="#">Neighborhoods</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -111,7 +135,9 @@
     <section class="mission">
       <div class="container">
         <div class="mission_block">
-          <img src="img/mission/1.jpg" alt="">
+          <div class="mission_block_wrap">
+            <img src="img/mission/1.jpg" alt="">
+          </div>
           <div class="mission_block_text">
             <h2>Our Mission</h2>
             <p>At Casaverse, we're committed to helping our clients make informed real estate decisions and achieve their goals. We're dedicated to providing unparalleled service, market insights, and investment consultancy to help our clients buy, sell, and rent their properties in a seamless and efficient manner. </p>
