--- a/blog.html
+++ b/blog.html
@@ -49,10 +49,34 @@
             </a>
           </div>
         </div>
+        <div class="header_drop">
+          <div class="header_drop_left">
+            <ul>
+              <li class="current-menu-item">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Properties</a>
+              </li>
+              <li>
+                <a href="#">Projects</a>
+              </li>
+              <li>
+                <a href="#">Neighborhoods</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
-    <section class="about_main neigh">
+    <section class="about_main">
       <div class="container">
         <div class="about_main_block">
           <h2>Blog</h2>
@@ -74,7 +98,7 @@
                 <p>A Luxurious Lifestyle in the Heart of Dubai Marina</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
@@ -87,7 +111,7 @@
                 <p>The CasaverseGuide to Finding the Perfect Propertyin Dubai</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
@@ -100,7 +124,7 @@
                 <p>Is It Time to Invest?</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
@@ -113,7 +137,7 @@
                 <p>A Luxurious Lifestyle in the Heart of Dubai Marina</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
@@ -126,7 +150,7 @@
                 <p>The CasaverseGuide to Finding the Perfect Propertyin Dubai</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
@@ -139,7 +163,7 @@
                 <p>Is It Time to Invest?</p>
               </div>
               <div class="blog_page_list_item_text_btn">
-                <img src="img/blog_page/arrow.svg" alt="">
+                <div class="blog_page_list_item_text_btn_line"></div>
                 <span>Reed More</span>
               </div>
             </div>
