--- a/properties.html
+++ b/properties.html
@@ -49,6 +49,30 @@
             </a>
           </div>
         </div>
+        <div class="header_drop">
+          <div class="header_drop_left">
+            <ul>
+              <li class="current-menu-item">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Properties</a>
+              </li>
+              <li>
+                <a href="#">Projects</a>
+              </li>
+              <li>
+                <a href="#">Neighborhoods</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -80,7 +104,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -113,7 +137,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
@@ -133,7 +157,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -166,7 +190,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
@@ -186,7 +210,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -219,7 +243,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
@@ -239,7 +263,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -272,7 +296,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
@@ -292,7 +316,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -325,7 +349,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
@@ -345,7 +369,7 @@
               <span class="properties_block_item_mob_price">$55,999</span>
               <div class="properties_block_item_mob_details">
                 <div class="properties_block_item_mob_details_left">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_mob_details_left_line"></div>
                   <span>details</span>
                 </div>
                 <div class="properties_block_item_mob_details_right">
@@ -378,7 +402,7 @@
               <div class="properties_block_item_desk_bottom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 <div class="properties_block_item_desk_bottom_btn">
-                  <img src="img/properties/arrow.svg" alt="">
+                  <div class="properties_block_item_desk_bottom_btn_line"></div>
                   <span>details</span>
                 </div>
               </div>
