--- a/properties_single.html
+++ b/properties_single.html
@@ -49,6 +49,30 @@
             </a>
           </div>
         </div>
+        <div class="header_drop">
+          <div class="header_drop_left">
+            <ul>
+              <li class="current-menu-item">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Properties</a>
+              </li>
+              <li>
+                <a href="#">Projects</a>
+              </li>
+              <li>
+                <a href="#">Neighborhoods</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
