--- a/about.html
+++ b/about.html
@@ -100,8 +100,13 @@
             <div class="welcome_block_bot_text">
               <p>We believe every property is unique, and that's why we provide personalized services to perfectly match your needs. Whether you’re a serious investor or a first-time home buyer, we’ve got you covered with our wide range of services, including property management, sales, leasing, investment consultancy, and market analysis.</p>
               <p>We're committed to being your go-to experts for all things real estate, from tips on Dubai's best neighbourhoods to expert advice. So why wait? Let's find your dream property together!  Reach out to us today to get started.</p>
-              <img class="desk" src="img/welcome/polosa.svg" alt="">
-              <img class="mob" src="img/welcome/polosa_mob.svg" alt="">
+              <svg class="desk" width="642" height="33" viewBox="0 0 642 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M347 22.7526L345.688 23.1337C323.745 29.5046 300.255 27.8976 279.384 18.598L271.071 14.894C249.91 5.46477 225.638 6.00752 204.919 16.3733V16.3733C183.911 26.8838 159.267 27.2878 137.925 17.4716L135.813 16.5C113.136 6.06961 86.6439 6.65199 64.3212 17.8202V17.8202C45.0195 27.4769 22.4701 29.4237 1.85949 23.0197L1 22.7526" stroke="#20BDFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M641 22.7526L639.692 23.1327C617.775 29.5038 594.308 27.897 573.464 18.598L565.162 14.8946C544.027 5.46605 519.778 6.00869 499.086 16.3733V16.3733C478.105 26.8825 453.484 27.2865 432.17 17.4712L430.061 16.5C407.413 6.07081 381.253 6.50004 358.96 17.6666L357.456 18.4201C338.706 27.8118 317.16 29.9933 296.908 24.5504L293 23.5" stroke="#20BDFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <svg class="mob" width="314" height="13" viewBox="0 0 314 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M313 9.03158L310.839 9.36888C291.252 12.4268 271.255 11.6236 251.976 7.00455L244.113 5.1208C224.609 0.447934 204.245 0.729307 184.878 5.9393V5.9393C165.223 11.2264 144.548 11.4367 124.791 6.55035L122.565 6C101.348 0.752666 79.0904 0.993224 57.984 6.67096V6.67096C40.0612 11.4923 21.265 12.4172 2.95877 9.35882L1.00001 9.03158" stroke="#20BDFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </div>
           <img class="star_big" src="img/welcome/star_big.svg" alt="">
@@ -122,9 +127,18 @@
               <p class="founder_block_wrap_left_thin">Under Hashem's leadership, Casaverse has become one of Dubai's top real estate agencies, earning accolades and praise from industry experts and clients alike. He leads a team of professionals who are committed to providing unparalleled service, market analysis, and investment consultancy.As a thriving real estate entrepreneur, Hashem values integrity, innovation, and excellence. He's a well-respected member of the Dubai business community, with a reputation for honesty, hard work, and unwavering commitment to his clients.</p>
               <p class="founder_block_wrap_left_thin">At Casaverse, Hashem is committed to helping you achieve your real estate dreams. He believes that everyone deserves personalized attention, and he's ready to listen to your needs and provide expert guidance every step of the way. Get in touch with Hashem and the Casaverse team today, and let's turn your real estate goals into a reality!</p>
             </div>
-            <div class="founder_block_wrap_right">
-              <img class="founder_block_wrap_right_mob" src="img/founder/feature_mob.svg" alt="">
-              <img class="founder_block_wrap_right_feature" src="img/founder/feature.svg" alt="">
+            <div class="founder_block_wrap_right anime">
+
+              <svg class="founder_block_wrap_right_mob" width="114" height="121" viewBox="0 0 114 121" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="mob_line" d="M80.2924 7.87362C29.5768 5.94782 69.0509 69.8659 78.6929 54.2626C83.7612 46.0608 47.3361 31.7929 32.4697 58.3973C23.9759 73.5977 27.4197 99.6022 47.1017 114.337" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+                <path class="mob_arrow" d="M47.0332 103.688L47.5693 114.694L36.7384 115.221" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+
+              <svg class="founder_block_wrap_right_feature" width="217" height="200" viewBox="0 0 217 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="desk_line" d="M13.4369 138.304C13.4138 47.5624 124.954 122.397 96.4264 138.573C81.431 147.075 58.3936 81.034 106.929 56.2656C134.659 42.1142 180.888 50.0195 205.888 86.1777" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+                <path class="desk_arrow" d="M186.867 85.3383L206.494 87.0377L208.167 67.722" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+              
               <img class="founder_block_wrap_right_main" src="img/founder/1.png" alt="">
             </div>
           </div>
