--- a/index.html
+++ b/index.html
@@ -662,13 +662,19 @@
         <div class="work_block">
           <div class="work_block_wrap">
             <h2>Work With Us</h2>
-            <div class="work_block_wrap_text">
+            <div class="work_block_wrap_text anime">
               <p>Are you passionate about real estate? Do you have a sharp eye for finding the best properties and investments? If so, we want to hear from you! Casaverse is a dynamic and growing real estate agency based in Dubai, and we're always on the lookout for talented individuals to join our team. Whether you're an experienced agent, a marketing guru, or a tech whiz, we have positions for you. Join our team and be a part of a company that values integrity, excellence, and innovation. 
                 <br>
                 <br>
-                Email your CV to <a href="mailto:careers@casa-verse.com">careers@casa-verse.com</a> to start your journey with us today!</p>
-              <img class="desk" src="img/work/feature.svg" alt="">
-              <img class="mob" src="img/work/feature_mob.svg" alt="">
+              Email your CV to <a href="mailto:careers@casa-verse.com">careers@casa-verse.com</a> to start your journey with us today!</p>
+              <svg class="desk" width="611" height="100" viewBox="0 0 611 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="desk_line" d="M43.0004 20.1327C227.908 24.5974 587.26 -10.907 608.501 6.63259C615.001 12.0001 570.592 11.1882 342 12C113.408 12.8118 16.7714 -7.91605 2.50037 25.1327C-6.99963 47.1327 57 80.0011 163.315 80.0011" stroke="#A5FECB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path class="desk_arrow" d="M147 61L166 80L147 99" stroke="#A5FECB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <svg class="mob" width="262" height="55" viewBox="0 0 262 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="mob_line" d="M74.5002 10.2545C152.417 14.7037 260.751 -8 260.751 6.88263C260.751 12.8921 244.777 11.4225 148.452 12.2314C52.1268 13.0404 -0.499725 -0.500887 1.50027 13.4991C3.28913 26.0211 132 -3.49876 132 52.9991" stroke="#A5FECB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path class="mob_arrow" d="M143 43L132 54L121 43" stroke="#A5FECB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             
             <a class="work_block_wrap_btn" href="#">
