--- a/blog.html
+++ b/blog.html
@@ -76,12 +76,16 @@
       </div>
     </header>
 
-    <section class="about_main">
+    <section class="about_main anime">
       <div class="container">
         <div class="about_main_block">
           <h2>Blog</h2>
-          <img class="desk" src="img/blog_page/feature.svg" alt="">
-          <img class="mob" src="img/blog_page/feature_mob.svg" alt="">
+          <svg class="about_anime_mob" width="82" height="10" viewBox="0 0 82 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M81 6.46361C53.0512 6.7807 -2.05076 6.52704 1.13216 2.97564C5.11082 -1.4636 89.3994 2.02422 74.811 9" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          <svg class="about_anime_desk" width="174" height="15" viewBox="0 0 174 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 9.87834C61.09 10.3936 179.559 9.98142 172.716 4.21041C164.162 -3.00335 -17.0587 2.66435 14.3064 14" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
           <p>Read through our latest blog articles to stay up-to-date on the latest real estate trends, opportunities and projects</p>
         </div>
       </div>
