--- a/neighborhoods_single.html
+++ b/neighborhoods_single.html
@@ -76,12 +76,19 @@
       </div>
     </header>
 
-    <section class="about_main neigh_single">
+    <section class="about_main neigh_single anime">
       <div class="container">
         <div class="about_main_block">
           <h2> Welcome to Dubai Marina</h2>
-          <img class="desk" src="img/neighborhoods_single/feature_desk.svg" alt="">
-          <img class="mob" src="img/neighborhoods_single/feature_mob.svg" alt="">
+
+          <svg class="about_anime_desk" width="578" height="15" viewBox="0 0 578 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 9.87834C202.232 10.3936 598.966 9.98142 576.048 4.21041C547.402 -3.00335 -59.4757 2.66435 45.561 14" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+
+          <svg class="about_anime_mob" width="314" height="10" viewBox="0 0 314 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M313 6.46361C204 6.7807 -10.898 6.52704 1.51543 2.97564C17.0322 -1.4636 345.758 2.02422 288.863 9" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+
           <p>With an unbeatable waterfront location, Dubai Marina is one of Dubai's most prestigiousneighborhoods. A sought-after destination for residents and visitors alike, Dubai Marina offershigh-end living, world-class facilities and aplethora of dining, entertainment, and shoppingoptions</p>
         </div>
       </div>
