--- a/properties.html
+++ b/properties.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <meta name="author" content="Yuriy Zudikhin" />
     <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/nouislider.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -76,12 +77,19 @@
       </div>
     </header>
 
-    <section class="about_main neigh">
+    <section class="about_main neigh anime">
       <div class="container">
         <div class="about_main_block">
           <h2>Featured Properties</h2>
-          <img class="desk" src="img/properties/feature.svg" alt="">
-          <img class="mob" src="img/properties/feature_mob.svg" alt="">
+
+          <svg class="about_anime_mob" width="251" height="10" viewBox="0 0 251 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M250 6.46361C163.359 6.7807 -7.45736 6.52704 2.40972 2.97564C14.7436 -1.4636 276.038 2.02422 230.814 9" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+
+          <svg class="about_anime_desk" width="482" height="15" viewBox="0 0 482 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M481 9.87834C313.307 10.3936 -17.3046 9.98142 1.79294 4.21041C25.6649 -3.00335 531.396 2.66435 443.866 14" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+
           <p>Discover our exciting listings and find your next dream home or property investment today</p>
         </div>
       </div>
@@ -89,6 +97,9 @@
 
     <section class="properties">
       <div class="container">
+        <!-- <div class="properties_filter">
+          <div class=""></div>
+        </div> -->
         <div class="properties_block">
 
           <a class="properties_block_item" href="#">
@@ -474,7 +485,12 @@
     
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
+    <script src="js/nouislider.js"></script>
     <script src="js/main.js"></script>
     
   </body>
 </html>
+
+<script>
+
+</script>
