--- a/properties_single.html
+++ b/properties_single.html
@@ -143,7 +143,7 @@
             <h2>FEATURES & AMENITIES</h2>
             <div class="amenities_nav">
                 <div data-target="interior" class="amenities_nav_item active">
-                    <span>Interior</span>
+                    <span>Interior & Financial</span>
                 </div>
                 <div data-target="exterior" class="amenities_nav_item">
                     <span>Exterior</span>
@@ -151,154 +151,111 @@
                 <div data-target="area" class="amenities_nav_item">
                     <span> Area & lot</span>
                 </div>
-                <div data-target="financial" class="amenities_nav_item">
-                    <span>Financial</span>
-                </div>
             </div>
             <div class="amenities_block">
-                <div id="interior" class="amenities_block_item active">
-                    <div class="amenities_block_item_left">
-                        <div class="amenities_block_item_left_wrap">
+                <div id="interior" class="amenities_block_item amenities_block_first active">
+                    <div class="amenities_block_first_left">
+                        <div class="amenities_block_first_left_wrap">
                             <p>Total Bedrooms</p>
                             <span>3</span>
                         </div>
-                        <div class="amenities_block_item_left_wrap">
+                        <div class="amenities_block_first_left_wrap">
                             <p>Full Bathrooms</p>
                             <span>2</span>
                         </div>
-                        <div class="amenities_block_item_left_wrap">
+                        <div class="amenities_block_first_left_wrap">
                             <p>Total Bathrooms</p>
                             <span>2</span>
                         </div>
                     </div>
-                    <div class="amenities_block_item_center">
-                        <div class="amenities_block_item_center_wrap">
+                    <div class="amenities_block_first_center">
+                        <div class="amenities_block_first_center_wrap">
                             <span>Laundry Room</span>
                             <p>Laundry Room</p>
                         </div>
-                        <div class="amenities_block_item_center_wrap">
+                        <div class="amenities_block_first_center_wrap">
                             <span>Flooring</span>
                             <p>Laminate</p>
                         </div>
                     </div>
-                    <div class="amenities_block_item_right">
-                        <div class="amenities_block_item_right_wrap">
+                    <div class="amenities_block_first_right">
+                        <div class="amenities_block_first_right_wrap">
                             <span>Fireplace</span>
                             <p>LR</p>
                         </div>
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Appliances</span>
-                            <p>Disposal, Dryer, Gas Stove, Microwave, Washer</p>
+                        <div class="amenities_block_first_right_wrap">
+                            <span>water Source</span>
+                            <p>$8,750,000</p>
                         </div>
+                        <div class="amenities_block_first_right_wrap">
+                          <span>Appliances</span>
+                          <p>Disposal, Dryer, Gas Stove, Microwave, Washer</p>
+                      </div>
                     </div>
                 </div>
-                <div id="exterior" class="amenities_block_item">
-                    <div class="amenities_block_item_left">
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bedrooms</p>
-                            <span>3</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Full Bathrooms</p>
-                            <span>2</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bathrooms</p>
-                            <span>2</span>
-                        </div>
+                <div id="exterior" class="amenities_block_item amenities_block_second">
+                  <div class="amenities_block_second_wrap">
+                    <div class="amenities_block_second_wrap_item">
+                      <span>water Source</span>
+                      <p>SB Wtr</p>
                     </div>
-                    <div class="amenities_block_item_center">
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Laundry Room</span>
-                            <p>Laundry Room</p>
-                        </div>
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Flooring</span>
-                            <p>Laminate</p>
-                        </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Utilities</span>
+                      <p>Cable Available, Underground Utilities</p>
                     </div>
-                    <div class="amenities_block_item_right">
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Fireplace</span>
-                            <p>LR</p>
-                        </div>
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Appliances</span>
-                            <p>Disposal, Dryer, Gas Stove, Microwave, Washer</p>
-                        </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Parking</span>
+                      <p>Paved</p>
                     </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Utilities</span>
+                      <p>Cable Available, Underground Utilities</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Roof</span>
+                      <p>Other</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Lot Features</span>
+                      <p>Level</p>
+                    </div>
+                  </div>
                 </div>
-                <div id="area" class="amenities_block_item">
-                    <div class="amenities_block_item_left">
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bedrooms</p>
-                            <span>3</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Full Bathrooms</p>
-                            <span>2</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bathrooms</p>
-                            <span>2</span>
-                        </div>
+                <div id="area" class="amenities_block_item amenities_block_thrid">
+                  <div class="amenities_block_thrid_wrap">
+                    <div class="amenities_block_thrid_wrap_left">
+                      <div class="amenities_block_thrid_wrap_left_item">
+                        <span>water Source</span>
+                        <p>For Sale</p>
+                      </div>
+                      <div class="amenities_block_thrid_wrap_left_item">
+                        <span>Utilities</span>
+                        <p>3,379 SQ.FT.</p>
+                      </div>
+                      <div class="amenities_block_thrid_wrap_left_item">
+                        <span>Roof</span>
+                        <p>23-1057</p>
+                      </div>
+                      <div class="amenities_block_thrid_wrap_left_item">
+                        <span>Lot Features</span>
+                        <p>RESIDENTIAL</p>
+                      </div>
                     </div>
-                    <div class="amenities_block_item_center">
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Laundry Room</span>
-                            <p>Laundry Room</p>
-                        </div>
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Flooring</span>
-                            <p>Laminate</p>
-                        </div>
+                    <div class="amenities_block_thrid_wrap_right">
+                      <div class="amenities_block_thrid_wrap_right_item">
+                        <span>Parking</span>
+                        <p>Paved</p>
+                      </div>
+                      <div class="amenities_block_thrid_wrap_right_item">
+                        <span>Utilities</span>
+                        <p>Mountain(s), Islands, Coastline, Ocean, City, Panoramic</p>
+                      </div>
+                      <div class="amenities_block_thrid_wrap_right_item">
+                        <span>Parking</span>
+                        <p>Paved</p>
+                      </div>
                     </div>
-                    <div class="amenities_block_item_right">
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Fireplace</span>
-                            <p>LR</p>
-                        </div>
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Appliances</span>
-                            <p>Disposal, Dryer, Gas Stove, Microwave, Washer</p>
-                        </div>
-                    </div>
-                </div>
-                <div id="financial" class="amenities_block_item">
-                    <div class="amenities_block_item_left">
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bedrooms</p>
-                            <span>3</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Full Bathrooms</p>
-                            <span>2</span>
-                        </div>
-                        <div class="amenities_block_item_left_wrap">
-                            <p>Total Bathrooms</p>
-                            <span>2</span>
-                        </div>
-                    </div>
-                    <div class="amenities_block_item_center">
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Laundry Room</span>
-                            <p>Laundry Room</p>
-                        </div>
-                        <div class="amenities_block_item_center_wrap">
-                            <span>Flooring</span>
-                            <p>Laminate</p>
-                        </div>
-                    </div>
-                    <div class="amenities_block_item_right">
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Fireplace</span>
-                            <p>LR</p>
-                        </div>
-                        <div class="amenities_block_item_right_wrap">
-                            <span>Appliances</span>
-                            <p>Disposal, Dryer, Gas Stove, Microwave, Washer</p>
-                        </div>
-                    </div>
+                  </div>
                 </div>
             </div>
         </div>
