--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
       </div>
     </header>
 
-    <main class="main">
+    <main class="main anime">
       <div class="container">
         <div class="main_block">
           <div class="main_block_text">
             <div class="main_block_text_title">
               <h2>Your key to a realm <br> of Dubai's finest homes <br> and property investments</h2>
-              <img src="img/main/feature.svg" alt="">
+              <svg class="main_anim_desk" width="494" height="63" viewBox="0 0 494 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 55.467C204.028 55.467 489.633 64.3964 492.943 38.9166C499.109 -8.55669 5.83919 -11.7698 5.83945 31.0769C5.83963 62.1066 136.204 62 215.479 62" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+              <svg class="main_anim_mob" width="314" height="37" viewBox="0 0 314 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 31.2515C0.447715 31.2515 0 31.6992 0 32.2515C0 32.8038 0.447715 33.2515 1 33.2515V31.2515ZM312.964 22.7554L311.974 22.6133L312.964 22.7554ZM4.06892 18.2572L3.06892 18.2573L4.06892 18.2572ZM1 33.2515C65.342 33.2515 142.852 34.5323 204.485 33.9858C235.305 33.7125 262.196 32.9822 281.521 31.4035C291.177 30.6147 298.986 29.611 304.464 28.3348C307.197 27.6982 309.407 26.9811 310.99 26.1587C312.513 25.3674 313.749 24.325 313.953 22.8975L311.974 22.6133C311.916 23.0133 311.492 23.6441 310.068 24.384C308.704 25.0926 306.682 25.7645 304.01 26.387C298.679 27.6289 290.989 28.6234 281.358 29.4101C262.11 30.9825 235.281 31.7126 204.467 31.9859C142.83 32.5325 65.4076 31.2515 1 31.2515V33.2515ZM313.953 22.8975C314.277 20.6417 312.912 18.7196 310.726 17.1361C308.521 15.5394 305.242 14.0964 301.117 12.7806C292.849 10.1429 280.878 7.92361 266.473 6.1119C237.645 2.48613 198.869 0.469347 159.993 0.0727797C121.115 -0.323799 82.0984 0.899546 52.7863 3.76292C38.1378 5.19387 25.8712 7.03819 17.2475 9.3079C12.9438 10.4406 9.48402 11.6952 7.07858 13.0925C4.73524 14.4537 3.0689 16.1449 3.06892 18.2573L5.06892 18.2572C5.06891 17.2966 5.84634 16.1212 8.08318 14.8219C10.2579 13.5586 13.5147 12.3585 17.7566 11.242C26.2242 9.01339 38.3649 7.1812 52.9807 5.75344C82.1973 2.8994 121.137 1.67653 159.972 2.07268C198.808 2.46883 237.501 4.48371 266.224 8.09626C280.594 9.90371 292.42 12.1052 300.51 14.686C304.564 15.9794 307.604 17.3451 309.552 18.7559C311.519 20.18 312.139 21.4643 311.974 22.6133L313.953 22.8975ZM3.06892 18.2573C3.06893 20.9276 4.63481 23.1385 7.13417 24.9422C9.62745 26.7415 13.1787 28.2384 17.4908 29.5003C26.1273 32.0277 38.1147 33.6953 51.6063 34.8017C78.6067 37.0159 111.886 37 137.011 37V35C111.864 35 78.6723 35.0146 51.7697 32.8084C38.3098 31.7046 26.4876 30.0493 18.0525 27.5808C13.8288 26.3448 10.5287 24.9255 8.30456 23.3204C6.08651 21.7197 5.06893 20.0378 5.06892 18.2572L3.06892 18.2573Z" fill="#A5FECB"/>
+              </svg>
             </div>
             <div class="main_block_text_bottom">
               <a href="#">
@@ -105,8 +110,10 @@
       <div class="container">
         <div class="about_block">
           <div class="about_block_left">
-            <img class="mob" src="img/about/about_mob.svg" alt="">
-            <img class="desk" src="img/about/about_desk.svg" alt="">
+            <div class="about_block_left_wrap">
+              <img class="mob" src="img/about/about_mob.svg" alt="">
+              <img class="desk" src="img/about/about_desk.svg" alt="">
+            </div>
           </div>
           <div class="about_block_right">
             <h2>Casaverse Real Estate Services</h2>
@@ -124,8 +131,6 @@
         </div>
       </div>
     </section>
-
-    <div class="test_arrow"></div>
 
     <section class="featured">
       <div class="container">
@@ -370,56 +375,74 @@
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
-              <img class="one" src="img/neighborhoods/feature_1.svg" alt="">
+              <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.90363 66.2127C2.37651 35.1958 6.67586 -10.381 55.0891 24.6699C64.1898 -2.41776 113.343 -18.8503 132.448 47.7127" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
-              <img class="two" src="img/neighborhoods/feature_2.svg" alt="">
+
+              <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M185 88.5043C109.071 88.5043 2.25906 102.85 1.02143 61.9152C-1.28451 -14.3534 183.19 -19.5154 183.19 49.3203C183.19 99.1712 134.436 99 104.788 99" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
-              <img class="three" src="img/neighborhoods/feature_3.svg" alt="">
+              <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M143 1.72174L131.219 5.61713C123.148 8.28571 114.442 8.34681 106.334 5.79177L104.769 5.29849C97.4027 2.97716 89.4814 3.11502 82.2006 5.69127V5.69127C74.814 8.30498 66.7712 8.40787 59.3201 5.98398L57.3853 5.35458C50.1433 2.99872 42.3264 3.09873 35.147 5.63907V5.63907C27.6818 8.28061 19.5361 8.2806 12.0708 5.63907L0.999998 1.72174" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
-              <img class="four" src="img/neighborhoods/feature_4.svg" alt="">
+              <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.999999 8L12.7814 4.10461C20.8523 1.43603 29.5584 1.37493 37.6661 3.92998L39.2313 4.42326C46.5973 6.74459 54.5186 6.60673 61.7994 4.03048V4.03048C69.186 1.41677 77.2288 1.31388 84.6799 3.73778L86.6147 4.36718C93.8567 6.72304 101.674 6.62303 108.853 4.08269V4.08269C116.318 1.44116 124.464 1.44116 131.929 4.08269L143 8.00002" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
-              <img class="one" src="img/neighborhoods/feature_1.svg" alt="">
+              <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M121.966 1.2082C130.032 31.1616 138.419 76.1658 82.2397 55.7639C80.9308 84.3095 38.1828 113.613 1.52692 54.86" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
-              <img class="two" src="img/neighborhoods/feature_2.svg" alt="">
+              <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M143 1.72174L131.219 5.61713C123.148 8.28571 114.442 8.34681 106.334 5.79177L104.769 5.29849C97.4027 2.97716 89.4814 3.11502 82.2006 5.69127V5.69127C74.814 8.30498 66.7712 8.40787 59.3201 5.98398L57.3853 5.35458C50.1433 2.99872 42.3264 3.09873 35.147 5.63907V5.63907C27.6818 8.28061 19.5361 8.2806 12.0708 5.63907L0.999998 1.72174" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
-              <img class="three" src="img/neighborhoods/feature_3.svg" alt="">
+              <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M185 88.5043C109.071 88.5043 2.25906 102.85 1.02143 61.9152C-1.28451 -14.3534 183.19 -19.5154 183.19 49.3203C183.19 99.1712 134.436 99 104.788 99" stroke="white" stroke-width="2" stroke-linecap="round"/>
+              </svg>
             </div>
           </a>
           <a class="neighborhoods_slider_item" href="#">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
-              <img class="four" src="img/neighborhoods/feature_4.svg" alt="">
+              <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.999999 8L12.7814 4.10461C20.8523 1.43603 29.5584 1.37493 37.6661 3.92998L39.2313 4.42326C46.5973 6.74459 54.5186 6.60673 61.7994 4.03048V4.03048C69.186 1.41677 77.2288 1.31388 84.6799 3.73778L86.6147 4.36718C93.8567 6.72304 101.674 6.62303 108.853 4.08269V4.08269C116.318 1.44116 124.464 1.44116 131.929 4.08269L143 8.00002" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
           </a>
         </div>
@@ -753,6 +776,17 @@
     
   </body>
 </html>
+
+<script>
+
+let bg = document.querySelector('.about_block_left_wrap');
+window.addEventListener('mousemove', function(e) {
+  let x = e.clientX / window.innerWidth;
+  let y = e.clientY / window.innerHeight;  
+  bg.style.transform = 'translate(-' + x * 50 + 'px, -' + y * 50 + 'px)';
+});
+
+</script>
 
 <script>
   $(".blog_block_right_item").hover(function() {
