--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -76,11 +76,15 @@
       </div>
     </header>
 
-    <section class="about_main neigh">
+    <section class="about_main neigh anime">
       <div class="about_main_block">
         <h2>Neighborhoods</h2>
-        <img class="desk" src="img/neighborhoods_page/feature.svg" alt="">
-        <img class="mob" src="img/neighborhoods_page/feature_mob.svg" alt="">
+        <svg class="about_anime_desk" width="351" height="15" viewBox="0 0 351 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 9.87834C122.577 10.3936 362.271 9.98142 348.425 4.21041C331.118 -3.00335 -35.5374 2.66435 27.9223 14" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <svg class="about_anime_mob" width="203" height="10" viewBox="0 0 203 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M202 6.46361C132.128 6.7807 -5.62691 6.52704 2.33041 2.97564C12.2771 -1.4636 222.999 2.02422 186.527 9" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+        </svg>
         <p>Explore Dubai's most exciting neighborhoods</p>
       </div>
     </section>
@@ -89,10 +93,12 @@
       <div class="container">
         <div class="neighborhoods_page_block">
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br> Marina</h3>
-              <img src="img/neighborhoods_page/line_1.svg" alt="">
+              <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.90363 66.2127C2.37651 35.1958 6.67586 -10.381 55.0891 24.6699C64.1898 -2.41776 113.343 -18.8503 132.448 47.7127" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -104,10 +110,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/1.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Arabian <br> Ranches</h3>
-              <img src="img/neighborhoods_page/line_2.svg" alt="">
+              <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M185 87.5043C185.552 87.5043 186 87.952 186 88.5043C186 89.0566 185.552 89.5043 185 89.5043V87.5043ZM1.02142 61.9152L2.02097 61.885L1.02142 61.9152ZM183.19 49.3203H184.19H183.19ZM185 89.5043C166.04 89.5043 145.153 90.3998 124.429 91.1056C103.719 91.8109 83.176 92.3264 64.9593 91.5594C46.7635 90.7933 30.7857 88.7453 19.251 84.2714C7.69646 79.7899 0.348679 72.7542 0.0218811 61.9454L2.02097 61.885C2.31299 71.5436 8.78079 78.0653 19.9743 82.4068C31.1877 86.756 46.8904 88.7969 65.0434 89.5612C83.1755 90.3246 103.65 89.8121 124.361 89.1068C145.057 88.402 165.995 87.5043 185 87.5043V89.5043ZM0.0218811 61.9454C-0.569138 42.3973 10.835 27.4827 27.9998 17.2329C45.1502 6.99158 68.1664 1.32 91.1927 0.204808C114.218 -0.910355 137.377 2.52468 154.823 10.6157C172.269 18.7072 184.19 31.5677 184.19 49.3203L182.19 49.3203C182.19 32.655 171.052 20.3474 153.981 12.4301C136.91 4.51237 114.094 1.09801 91.2895 2.20247C68.4854 3.3069 45.8152 8.92396 29.0252 18.95C12.2495 28.9675 1.45903 43.2988 2.02097 61.885L0.0218811 61.9454ZM184.19 49.3203C184.19 61.9518 181.099 71.503 175.921 78.6978C170.746 85.8876 163.547 90.6413 155.47 93.7861C139.368 100.055 119.568 100 104.788 100V98C119.657 98 139.057 98.0302 154.744 91.9224C162.562 88.8786 169.404 84.328 174.297 77.5294C179.187 70.7358 182.19 61.6142 182.19 49.3203L184.19 49.3203Z" fill="white"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -119,10 +127,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/2.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Palm <br>Jumeirah</h3>
-              <img src="img/neighborhoods_page/line_3.svg" alt="">
+              <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M143 1.72174L131.219 5.61713C123.148 8.28571 114.442 8.34681 106.334 5.79177L104.769 5.29849C97.4027 2.97716 89.4814 3.11502 82.2006 5.69127V5.69127C74.814 8.30498 66.7712 8.40787 59.3201 5.98398L57.3853 5.35458C50.1433 2.99872 42.3264 3.09873 35.147 5.63907V5.63907C27.6818 8.28061 19.5361 8.2806 12.0708 5.63907L0.999998 1.72174" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -134,9 +144,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/3.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>DAMAC <br>Lagoons</h3>
+              <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.999999 8L12.7814 4.10461C20.8523 1.43603 29.5584 1.37493 37.6661 3.92998L39.2313 4.42326C46.5973 6.74459 54.5186 6.60673 61.7994 4.03048V4.03048C69.186 1.41677 77.2288 1.31388 84.6799 3.73778L86.6147 4.36718C93.8567 6.72304 101.674 6.62303 108.853 4.08269V4.08269C116.318 1.44116 124.464 1.44116 131.929 4.08269L143 8.00002" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -148,10 +161,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/4.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Canal <br>Heights</h3>
-              <img src="img/neighborhoods_page/line_6.svg" alt="">
+              <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M121.966 1.2082C130.032 31.1616 138.419 76.1658 82.2397 55.7639C80.9308 84.3095 38.1828 113.613 1.52692 54.86" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -163,10 +178,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/5.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>District <br>One</h3>
-              <img src="img/neighborhoods_page/line_3.svg" alt="">
+              <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M143 1.72174L131.219 5.61713C123.148 8.28571 114.442 8.34681 106.334 5.79177L104.769 5.29849C97.4027 2.97716 89.4814 3.11502 82.2006 5.69127V5.69127C74.814 8.30498 66.7712 8.40787 59.3201 5.98398L57.3853 5.35458C50.1433 2.99872 42.3264 3.09873 35.147 5.63907V5.63907C27.6818 8.28061 19.5361 8.2806 12.0708 5.63907L0.999998 1.72174" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -178,10 +195,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/6.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br>Harbour</h3>
-              <img src="img/neighborhoods_page/line_2.svg" alt="">
+              <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M185 87.5043C185.552 87.5043 186 87.952 186 88.5043C186 89.0566 185.552 89.5043 185 89.5043V87.5043ZM1.02142 61.9152L2.02097 61.885L1.02142 61.9152ZM183.19 49.3203H184.19H183.19ZM185 89.5043C166.04 89.5043 145.153 90.3998 124.429 91.1056C103.719 91.8109 83.176 92.3264 64.9593 91.5594C46.7635 90.7933 30.7857 88.7453 19.251 84.2714C7.69646 79.7899 0.348679 72.7542 0.0218811 61.9454L2.02097 61.885C2.31299 71.5436 8.78079 78.0653 19.9743 82.4068C31.1877 86.756 46.8904 88.7969 65.0434 89.5612C83.1755 90.3246 103.65 89.8121 124.361 89.1068C145.057 88.402 165.995 87.5043 185 87.5043V89.5043ZM0.0218811 61.9454C-0.569138 42.3973 10.835 27.4827 27.9998 17.2329C45.1502 6.99158 68.1664 1.32 91.1927 0.204808C114.218 -0.910355 137.377 2.52468 154.823 10.6157C172.269 18.7072 184.19 31.5677 184.19 49.3203L182.19 49.3203C182.19 32.655 171.052 20.3474 153.981 12.4301C136.91 4.51237 114.094 1.09801 91.2895 2.20247C68.4854 3.3069 45.8152 8.92396 29.0252 18.95C12.2495 28.9675 1.45903 43.2988 2.02097 61.885L0.0218811 61.9454ZM184.19 49.3203C184.19 61.9518 181.099 71.503 175.921 78.6978C170.746 85.8876 163.547 90.6413 155.47 93.7861C139.368 100.055 119.568 100 104.788 100V98C119.657 98 139.057 98.0302 154.744 91.9224C162.562 88.8786 169.404 84.328 174.297 77.5294C179.187 70.7358 182.19 61.6142 182.19 49.3203L184.19 49.3203Z" fill="white"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
@@ -193,10 +212,12 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/7.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item" href="#">
+          <a class="neighborhoods_page_block_item anime" href="#">
             <div class="neighborhoods_page_block_item_title">
               <h3>Downtown Burj <br> Khalifa</h3>
-              <img src="img/neighborhoods_page/line_7.svg" alt="">
+              <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.999999 8L12.7814 4.10461C20.8523 1.43603 29.5584 1.37493 37.6661 3.92998L39.2313 4.42326C46.5973 6.74459 54.5186 6.60673 61.7994 4.03048V4.03048C69.186 1.41677 77.2288 1.31388 84.6799 3.73778L86.6147 4.36718C93.8567 6.72304 101.674 6.62303 108.853 4.08269V4.08269C116.318 1.44116 124.464 1.44116 131.929 4.08269L143 8.00002" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
